@@ -29,20 +29,25 @@ import org.apache.commons.lang3.StringUtils;
 import org.ballerinalang.annotation.JavaSPIService;
 import org.ballerinalang.langserver.codeaction.CodeActionNodeValidator;
 import org.ballerinalang.langserver.codeaction.CodeActionUtil;
+import org.ballerinalang.langserver.codeaction.ExpressionNodeValidator;
 import org.ballerinalang.langserver.common.constants.CommandConstants;
 import org.ballerinalang.langserver.common.utils.FunctionGenerator;
 import org.ballerinalang.langserver.common.utils.NameUtil;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedCodeActionProvider;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedPositionDetails;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
+import org.eclipse.lsp4j.Command;
 import org.eclipse.lsp4j.Position;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.TextEdit;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -65,8 +70,8 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 SyntaxKind.FUNCTION_CALL, SyntaxKind.QUALIFIED_NAME_REFERENCE, SyntaxKind.INDEXED_EXPRESSION,
                 SyntaxKind.FIELD_ACCESS, SyntaxKind.METHOD_CALL, SyntaxKind.CHECK_EXPRESSION, SyntaxKind.LET_EXPRESSION,
                 SyntaxKind.MAPPING_CONSTRUCTOR, SyntaxKind.TYPEOF_EXPRESSION, SyntaxKind.UNARY_EXPRESSION,
-                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR, 
-                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION, 
+                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR,
+                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION,
                 SyntaxKind.EXPLICIT_NEW_EXPRESSION, SyntaxKind.ERROR_CONSTRUCTOR, SyntaxKind.QUERY_EXPRESSION);
     }
 
@@ -85,13 +90,14 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         // 6. the qualified name reference of a function call expression
         // 7. a record field with default value
         // 8. a function call expression used in a start action
-        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent() 
+        // 9. a client declaration or a module client declaration
+        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent()
                 && !(nodeKind == SyntaxKind.MAPPING_CONSTRUCTOR && parentKind == SyntaxKind.TABLE_CONSTRUCTOR)
-                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL) 
-                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL) 
-                && parentKind == SyntaxKind.CALL_STATEMENT) 
+                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL)
+                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL)
+                && parentKind == SyntaxKind.CALL_STATEMENT)
                 && parentKind != SyntaxKind.CONST_DECLARATION
-                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT 
+                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT
                 && ((AssignmentStatementNode) parentNode).varRef().equals(node))
                 && !(nodeKind == SyntaxKind.QUALIFIED_NAME_REFERENCE && parentKind == SyntaxKind.FUNCTION_CALL)
                 && parentKind != SyntaxKind.RECORD_FIELD_WITH_DEFAULT_VALUE
@@ -106,42 +112,110 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
     @Override
     public List<CodeAction> getCodeActions(CodeActionContext context,
                                            RangeBasedPositionDetails posDetails) {
-        
+
         Node node = posDetails.matchedCodeActionNode();
         if (isNotExtractable(node, context)) {
             return Collections.emptyList();
         }
-        
-        String varName = getLocalVarName(context);
-        String value = node.toSourceCode().strip();
-        LineRange replaceRange = node.lineRange();
+
         Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(node);
         if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
             return Collections.emptyList();
         }
 
         Node statementNode = getStatementNode(node);
-        if (statementNode == null) {
+        if (statementNode == null || statementNode.kind() == SyntaxKind.OBJECT_FIELD) {
             return Collections.emptyList();
         }
-        String typeDescriptor = FunctionGenerator.getReturnTypeAsString(context, typeSymbol.get().signature());
-        if (statementNode.kind() == SyntaxKind.INVALID_EXPRESSION_STATEMENT) {
-            String variable = String.format("%s %s = %s", typeDescriptor, varName, value);
-            TextEdit edit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
-                    PositionUtil.toPosition(replaceRange.endLine())),  variable);
-            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
-                    List.of(edit), context.fileUri(), CodeActionKind.RefactorExtract));
+
+        // Check if the selection is a range or a position, and whether quick picks are supported by the client
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (CodeActionUtil.isRangeSelection(context.range())
+                || !lsClientCapabilities.getInitializationOptions().isQuickPickSupported()) {
+
+            List<TextEdit> textEdits = getTextEdits(context, typeSymbol.get(), node, statementNode);
+
+            CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                    textEdits, context.fileUri(), CodeActionKind.RefactorExtract);
+            CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_VARIABLE,
+                    getRenamePosition(textEdits.get(1).getRange().getStart()));
+            return Collections.singletonList(codeAction);
         }
+
+        ExpressionNodeValidator nodeValidator = new ExpressionNodeValidator();
+        node.accept(nodeValidator);
+        if (nodeValidator.isInvalidNode()) {
+            return Collections.emptyList();
+        }
+
+        // Selection is a position
+        List<Node> nodeList = getPossibleExpressionNodes(node);
+        LinkedHashMap<String, List<TextEdit>> textEditMap = new LinkedHashMap<>();
+        LinkedHashMap<String, Position> renamePositionMap = new LinkedHashMap<>();
+
+        // List out the expression node list that we are going to provide quick pick support
+        // Find the arg list for each of the expression nodes
+        nodeList.forEach(extractableNode -> {
+            Optional<TypeSymbol> tSymbol = context.currentSemanticModel()
+                    .flatMap(semanticModel -> semanticModel.typeOf(extractableNode));
+            if (tSymbol.isEmpty() || tSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+                return;
+            }
+            String key = extractableNode.toSourceCode().strip();
+            textEditMap.put(key,
+                    getTextEdits(context, tSymbol.get(), extractableNode, statementNode));
+            renamePositionMap.put(key, getRenamePosition(PositionUtil.toRange(extractableNode.lineRange()).getStart()));
+        });
+
+        if (lsClientCapabilities.getInitializationOptions().isPositionalRefactorRenameSupported()) {
+            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                    new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                            List.of(NAME, context.filePath().toString(), textEditMap, renamePositionMap)),
+                    CodeActionKind.RefactorExtract));
+        }
+
+        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                        List.of(NAME, context.filePath().toString(), textEditMap)), CodeActionKind.RefactorExtract));
+    }
+
+    private List<TextEdit> getTextEdits(CodeActionContext context, TypeSymbol typeSymbol, Node matchedNode,
+                                        Node statementNode) {
+        String varName = getLocalVarName(context);
+        String value = matchedNode.toSourceCode().strip();
+        LineRange replaceRange = matchedNode.lineRange();
+
         String paddingStr = StringUtils.repeat(" ", statementNode.lineRange().startLine().offset());
+        String typeDescriptor = FunctionGenerator.getReturnTypeAsString(context, typeSymbol.signature());
         String varDeclStr = String.format("%s %s = %s;%n%s", typeDescriptor, varName, value, paddingStr);
-        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(), 
+        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(),
                 statementNode.lineRange().startLine().offset());
         TextEdit varDeclEdit = new TextEdit(new Range(varDeclPos, varDeclPos), varDeclStr);
         TextEdit replaceEdit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
-                PositionUtil.toPosition(replaceRange.endLine())),  varName);
+                PositionUtil.toPosition(replaceRange.endLine())), varName);
 
-        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE, 
-                List.of(varDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract));
+        return List.of(varDeclEdit, replaceEdit);
+    }
+
+    private Position getRenamePosition(Position position) {
+        return new Position(position.getLine() + 1, position.getCharacter());
+    }
+
+    private static List<Node> getPossibleExpressionNodes(Node node) {
+        ExpressionNodeValidator nodeValidator = new ExpressionNodeValidator();
+        // Identify the sub-expressions to be extracted
+        List<Node> nodeList = new ArrayList<>();
+        while (node != null && !isStatementOrModuleDeclaration(node) && node.kind() != SyntaxKind.OBJECT_FIELD
+                && !nodeValidator.isInvalidNode()) {
+            nodeList.add(node);
+            node = node.parent();
+            node.accept(nodeValidator);
+        }
+        return nodeList;
+    }
+
+    private static boolean isStatementOrModuleDeclaration(Node node) {
+        return node instanceof StatementNode || node instanceof ModuleMemberDeclarationNode;
     }
 
     @Override
@@ -152,7 +226,7 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
     private Node getStatementNode(Node node) {
         Node statementNode = node;
         while (statementNode != null && !(statementNode instanceof StatementNode)
-                && !(statementNode instanceof ModuleMemberDeclarationNode) 
+                && !(statementNode instanceof ModuleMemberDeclarationNode)
                 && statementNode.kind() != SyntaxKind.OBJECT_FIELD) {
             statementNode = statementNode.parent();
         }
@@ -165,23 +239,23 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .collect(Collectors.toSet());
-        
+
         return NameUtil.generateTypeName(VARIABLE_NAME_PREFIX, allNames);
     }
 
     // If the variables within the selected range have been initialized in the closest statement node (and outside
     // the highlighted range), the expression is not extractable.
     private boolean isNotExtractable(Node matchedNode, CodeActionContext context) {
-        List<Symbol> symbolsWithinRange = getVisibleSymbols(context, 
+        List<Symbol> symbolsWithinRange = getVisibleSymbols(context,
                 PositionUtil.toPosition(matchedNode.lineRange().endLine())).stream()
-                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER) 
+                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER)
                         && context.currentSemanticModel().get().references(symbol).stream()
-                        .anyMatch(location -> 
+                        .anyMatch(location ->
                                 PositionUtil.isWithinLineRange(location.lineRange(), matchedNode.lineRange())))
                 .filter(symbol -> symbol.getLocation().isPresent() && PositionUtil.isWithinLineRange(
                         symbol.getLocation().get().lineRange(), getStatementNode(matchedNode).lineRange()))
                 .collect(Collectors.toList());
-        
+
         if (symbolsWithinRange.size() == 0) {
             return false;
         }
@@ -199,4 +273,5 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         return context.currentSemanticModel().get()
                 .visibleSymbols(context.currentDocument().get(), PositionUtil.getLinePosition(position));
     }
+    
 }
